--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
-    "fastify": "5.2.2"
+    "dotenv": "16.4.7",
+    "fastify": "5.2.2",
+    "zod": "3.24.2"
   }
 }
