--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "22.13.13",
+    "eslint": "9.23.0",
+    "neostandard": "0.12.1",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typescript": "5.8.2"
