--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/node": "22.13.13",
     "eslint": "9.23.0",
     "neostandard": "0.12.1",
+    "prisma": "6.5.0",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@prisma/client": "6.5.0",
     "dotenv": "16.4.7",
     "fastify": "5.2.2",
     "zod": "3.24.2"
