--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.13",
     "eslint": "9.23.0",
     "neostandard": "0.12.1",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.5.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "16.4.7",
     "fastify": "5.2.2",
     "zod": "3.24.2"
