--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.13",
+    "@vitest/coverage-v8": "3.0.9",
+    "@vitest/ui": "3.0.9",
     "eslint": "9.23.0",
     "neostandard": "0.12.1",
     "prisma": "6.5.0",
