--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run",
-    "test:watch": "vitest",
+    "test:watch": "vitest --project UnitTests",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui --project UnitTests",
+    "test:e2e": "vitest run --project E2ETests",
+    "test:unit": "vitest run --project UnitTests",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +28,7 @@
     "@vitest/ui": "3.0.9",
     "eslint": "9.23.0",
     "neostandard": "0.12.1",
+    "npm-run-all": "4.1.5",
     "prisma": "6.5.0",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
