--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test:ui": "vitest --ui --project UnitTests",
     "test:e2e": "vitest run --project E2ETests",
     "test:unit": "vitest run --project UnitTests",
-    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
-    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma --loglevel=error",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma --loglevel=error",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment"
   },
   "keywords": [],
@@ -30,6 +30,7 @@
     "neostandard": "0.12.1",
     "npm-run-all": "4.1.5",
     "prisma": "6.5.0",
+    "supertest": "7.1.0",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typescript": "5.8.2",
@@ -43,6 +44,7 @@
     "dayjs": "1.11.13",
     "dotenv": "16.4.7",
     "fastify": "5.2.2",
+    "latest": "0.2.0",
     "zod": "3.24.2"
   }
 }
