--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.13.13",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "3.0.9",
     "@vitest/ui": "3.0.9",
     "eslint": "9.23.0",
